# celery-signal-receivers

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  liccheck.ini  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish-pypi.yaml  publish-testpypi.yaml  release.yaml
src/celery_signals/: __init__.py  receivers.py
tests/: test_receivers.py
tests/testapp/: celery.py  settings.py
