[project]
name = "celery-signal-receivers"
version = "0.3.0"
description = "Extension for the Django signal receivers to process them asynchronously as the Celery tasks."
authors = [{ name = "Janusz Kamieński", email = "200957+ivellios@users.noreply.github.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "signals",
    "celery",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Celery",
]
dependencies = [
    "Django>=5.2,<7.0",
    "celery>=5.3,<6",
    "django-unified-signals>=0.4.1,<0.5",
]

[project.urls]
Homepage = "https://github.com/ivellios/celery-signal-receivers"
Repository = "https://github.com/ivellios/celery-signal-receivers"

[dependency-groups]
dev = [
    "django-stubs>=5.2,<7.0",
    "ipdb>=0.13.13",
    "ipython>=9.15.0",
    "jinja2>=3.1.6",
    "liccheck>=0.9.2",
    "mypy>=2.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0,<5",
    "pytest-watch>=4.2.0",
    "python-semantic-release>=10.6.1",
    "ruff>=0.15.22",
    "safety>=3.8.1",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/celery_signals"]

[tool.hatch.build.targets.wheel]
include = ["src/celery_signals"]

[tool.hatch.build.targets.wheel.sources]
"src/celery_signals" = "celery_signals"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["celery.*", "unified_signals.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.testapp.settings"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "{version}"
major_on_zero = false
allow_zero_version = true
build_command = ""
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "master"

[tool.semantic_release.remote]
type = "github"
